--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,9 +19,11 @@
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
