--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.9",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
     "sharp": "^0.23.2",
     "socket.io": "^2.3.0"
