--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,7 +23,8 @@
     "react-native-reanimated": "^1.4.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
